--- a/application/templates/partials/_header.html.twig
+++ b/application/templates/partials/_header.html.twig
@@ -1,6 +1,6 @@
 <header>
     <a href="/">Welcome</a>
     <nav>
-        <a href="{{path('blog_create')}}">Create Post</a>
+        <a href="{{path('company_list')}}">Scrap Data</a>
     </nav>
 </header>
